# record-screen

./: .editorconfig  Cargo.toml
public/: index.html
src/: endpoints.rs  ffmpeg.rs  logging.rs  main.rs  runner.rs  service.rs
