[package]
name = "record-screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
clap = { version = "4.3.19", features = ["derive", "env"] }
color-eyre = { version = "0.6.2", default-features = false }
dirs = "5.0.1"
futures = "0.3.28"
nix = { version = "0.26.2", default-features = false, features = ["signal"] }
num-format = "0.4.4"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
